result/manifests/PRODUCTION/prod/flink-cluster/taskmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repo_name-cluster-taskmanager-prod
  namespace: flink-assignment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: flink
      cluster: repo_name-cluster
      component: taskmanager
      track: prod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: flink
        cluster: repo_name-cluster
        component: taskmanager
        track: prod
    spec:
      topologySpreadConstraints:
        - maxSkew: 2
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: "flink"
              cluster: "repo_name-cluster"
              track: "prod"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - flink
                  - key: cluster
                    operator: In
                    values:
                      - repo_name-cluster
                  - key: track
                    operator: In
                    values:
                      - prod
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: taskmanager
        imagePullPolicy: Always
        image: _DOCKER_IMAGE_TAG_
        args: ["taskmanager"]
        resources:
          requests:
            cpu: "400.0"
            memory: "400Gi"
          limits:
            cpu: "400.0"
            memory: "400Gi"
        ports:
          - containerPort: 6666
            name: metric
          - containerPort: 9610
            name: metrics
          - containerPort: 44707
            name: dataport
