result/manifests/PRODUCTION/prod/flink-cluster/jobmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: repo_name-cluster-jobmanager-prod
  namespace: flink-assignment
  labels:
    app: flink
    cluster: repo_name-cluster
    component: jobmanager
    track: prod
spec:
  type: ClusterIP
  ports:
  - name: rpc
    port: 6123
  - name: blob
    port: 6124
  - name: query
    port: 6125
  - name: ui
    port: 8081
  selector:
    app: flink
    cluster: repo_name-cluster
    component: jobmanager
    track: prod
